# Relational-Algebra-Auto-Differentiation

./: README.md
Relational-Algebra-AD/: README  example.py  relationAD.py  relationAD_test.py  vjps.py
TestGCN/: CMakeLists.txt  TestGCN.cc
TestGCN/sharedLibraries/headers/: GCNEdge.h  GCNEdgeScanner.h  GCNMatrix.h  GCNMatrixScanner.h  GCNMatrixUpdateJoin.h  GCNMatrixWriter.h  GCNNeighbourJoin.h  GCNNode.h  GCNNodeAggregation.h  GCNNodeLossAggregation.h  GCNNodeLossJoin.h  GCNNodeScanner.h  GCNNodeWriter.h  GCNTransformReLUDerivateJoin.h  GCNTransformReLUJoin.h  GCNTransformSoftmaxJoin.h  GCNW1GradientAggregation.h  GCNW1GradientJoin.h  GCNW2GradientAggregation.h  GCNW2GradientJoin.h  GCNZ1GradientJoin.h  GCNZ2GradientJoin.h  GCNZ3GradientJoin.h  GCNZ4GradientJoin.h
TestGCN/sharedLibraries/source/: GCNEdge.cc  GCNEdgeScanner.cc  GCNMatrix.cc  GCNMatrixScanner.cc  GCNMatrixUpdateJoin.cc  GCNMatrixWriter.cc  GCNNeighbourJoin.cc  GCNNode.cc  GCNNodeAggregation.cc  GCNNodeLossAggregation.cc  GCNNodeLossJoin.cc  GCNNodeScanner.cc  GCNNodeWriter.cc  GCNTransformReLUDerivateJoin.cc  GCNTransformReLUJoin.cc  GCNTransformSoftmaxJoin.cc  GCNW1GradientAggregation.cc  GCNW1GradientJoin.cc  GCNW2GradientAggregation.cc  GCNW2GradientJoin.cc  GCNZ1GradientJoin.cc  GCNZ2GradientJoin.cc  GCNZ3GradientJoin.cc  GCNZ4GradientJoin.cc
