# create the target
add_pdb_integration_test(TestGCN)
target_link_libraries(TestGCN ${MKL_LIBRARIES})

# add a build dependency to build-tests target
add_dependencies(build-integration-tests TestGCN)

# compile all the objects
file(GLOB files "${PROJECT_SOURCE_DIR}/applications/TestGCN/sharedLibraries/source/*.cc")
foreach(file ${files})
    get_filename_component(fileName "${file}" NAME_WE)
    add_library(${fileName} MODULE ${file})
    target_link_libraries(${fileName} pdb-shared-common)
    target_link_libraries(${fileName} ${MKL_LIBRARIES})
    add_dependencies(shared-libraries ${fileName})
endforeach()

# add build dependencies to shared libraries it uses
add_dependencies(TestGCN GCNEdge)
add_dependencies(TestGCN GCNEdgeScanner)
add_dependencies(TestGCN GCNMatrix)
add_dependencies(TestGCN GCNMatrixScanner)
add_dependencies(TestGCN GCNMatrixUpdateJoin)
add_dependencies(TestGCN GCNMatrixWriter)
add_dependencies(TestGCN GCNNeighbourJoin)
add_dependencies(TestGCN GCNNode)
add_dependencies(TestGCN GCNNodeAggregation)
add_dependencies(TestGCN GCNNodeScanner)
add_dependencies(TestGCN GCNNodeWriter)
add_dependencies(TestGCN GCNNodeLossJoin)
add_dependencies(TestGCN GCNNodeLossAggregation)
add_dependencies(TestGCN GCNTransformReLUJoin)
add_dependencies(TestGCN GCNTransformReLUDerivateJoin)
add_dependencies(TestGCN GCNTransformSoftmaxJoin)
add_dependencies(TestGCN GCNW1GradientJoin)
add_dependencies(TestGCN GCNW1GradientAggregation)
add_dependencies(TestGCN GCNW2GradientJoin)
add_dependencies(TestGCN GCNW2GradientAggregation)
add_dependencies(TestGCN GCNZ2GradientJoin)
add_dependencies(TestGCN GCNZ1GradientJoin)
add_dependencies(TestGCN GCNZ3GradientJoin)
add_dependencies(TestGCN GCNZ4GradientJoin)
